[package]
name = "snap-coin"
version = "8.1.0"
edition = "2024"
authors = ["Ice"]
description = "The core library for developing and using Snap Coin"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
bincode = "2.0.1"
chrono = "0.4.42"
ed25519-dalek = "2.2.0"
flexi_logger = "0.31.7"
futures = "0.3.31"
get_if_addrs = "0.5.3"
log = "0.4.29"
num-bigint = "0.4.6"
probabilistic-collections = { version = "0.7.0", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sled = "0.34.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "sync", "time", "io-util", "net", "macros"] }

[lib]
name = "snap_coin"
path = "src/lib.rs"
