[package]
name = "snap-coin"
version = "9.0.0"
edition = "2024"
authors = ["Ice"]
description = "The core library for developing and using Snap Coin"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bincode = "2.0.1"
chrono = "0.4.42"
ed25519-dalek = "2.2.0"
flexi_logger = "0.31.7"
futures = "0.3.31"
get_if_addrs = "0.5.3"
log = "0.4.29"
num-bigint = "0.4.6"
once_cell = "1.21.3"
rand = "0.9.2"
randomx-rs = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sled = "0.34.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "sync", "time", "io-util", "net", "macros", "rt-multi-thread"] }

[lib]
name = "snap_coin"
path = "src/lib.rs"
